app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 */
// "bootstrap-sprockets" must be imported before "bootstrap" and "bootstrap/variables"
@import "jquery-ui";
@import "bootstrap-sprockets";
@import "mixins/variables"; // *** Colour changes can be done here! ***
@import "bootstrap";
@import "font-awesome-sprockets";
@import "font-awesome";
@import "mixins/mixins";
@import "*";
@import "cytoscape-panzoom";
@import "jquery.simplecolorpicker";
@import "eonasdan-bootstrap-datetimepicker";

// Sticky but not fixed footer
// http://cbracco.me/css-sticky-footer-effect/
html {
  height: 100%;
  position: relative;
}

body {
  min-width: 320px;
  position: relative;
  margin: 0;
  padding-bottom: 150px;
  min-height: 100%;
}

.footer {
  padding: 0;
  position: absolute;
  right: 0;
  bottom: 0;
  left: 0;
  background-color: #ddd;
  .footer-logo {
    margin: 0 5px;
    img { height: 48px; }
  }

  .eu-notice {
    padding-top: 10px;
    overflow: auto;

    img {
      float: left;
      margin: 0 8px;
      height: 39px;
    }
  }
}

div.wrapper {
  *zoom: 1;
  background-color: #FFF;
  border: 1px solid #cccccc;
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  border-radius: 4px;
  -webkit-box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.05);
  -moz-box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.05);
  box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.05);
  margin-bottom: 20px;
  display: flex;

  &.collapsing-wrapper {
    // Divs that were arranged left -> right will collapse to bottom -> top
    @media (max-width: $screen-md-min) {
      flex-direction: column-reverse;
    }
  }

  &.collapsing-wrapper-tb {
    // Opposite to above
    @media (max-width: $screen-md-min) {
      flex-direction: column;
    }
  }
}

#main-container, #header-container {
  max-width: 1200px;
}

#content {
  padding: 15px;
  flex-grow: 1;
}

#sidebar {
  width: 280px;
  border-right: 1px solid #cccccc;
  padding: 0;
  flex-shrink: 0;

  &.collapsing-sidebar {
    @media (max-width: $screen-md-min) {
      width: 100%;
      border-right: none;
    }
  }

  &.popout-sidebar {
    @media (max-width: $screen-md-min) {
      position: absolute;
      z-index: 10;
      background: white;
      border-bottom: 1px solid #cccccc;
      box-shadow: 2px 2px 3px 0 #999;
      display: none;
      &.open { display: block; }
    }
  }

  // Sidebar facet styles
  table tr td.h4 {
    padding-left: 10px;
  }

  table tr td {
    padding-left: 20px;
  }

  table tr td a {
    color: #000000;
    padding: 3px;
    text-decoration: none;
  }

  table tr td a:hover {
    background-color: #B0C3C9;
    color: #ffffff;
    padding: 3px;
    text-decoration: none;
  }
}

#sidebar-toggle {
  display: none;
  @media (max-width: $screen-md-min) {
    display: inline;
  }
}

#sidebar-header {
  display: none;
  @media (max-width: $screen-md-min) {
    display: block;
  }
}

.workflow_image {
  width: 100%;
}

.profile{
  margin-bottom: 30px;
}

// Bootstrap's breadcrumbs
.breadcrumbs {
  margin-top: 5px;
}
.breadcrumb {
  margin-bottom: 10px;
}

// Style for empty results etc.
.empty {
  color: #aaaaaa;
  font-style: italic;
}

// Override Bootstrap's alert
.alert {
  margin-bottom: 0px;
  margin-top: 5px;
}

// Bootstrap's row
.row {
  margin: 10px 0px 10px 0px;
  //padding: 0px 0px 10px 0px;  // Do not add padding to the row - messes up sidebar etc.
}

// From https://css-tricks.com/snippets/css/prevent-long-urls-from-breaking-out-of-container/
.dont-break-out {

  /* These are technically the same, but use both */
  overflow-wrap: break-word;
  word-wrap: break-word;

  -ms-word-break: break-all;
  /* This is the dangerous one in WebKit, as it breaks things wherever */
  word-break: break-all;
  /* Instead use this non-standard one: */
 // word-break: break-word;

  /* Adds a hyphen where the word breaks, if supported (No Blink) */
  -ms-hyphens: auto;
  -moz-hyphens: auto;
  -webkit-hyphens: auto;
  hyphens: auto;

}

.wide .media-item {
  width: 186px;
}

.listing_image {
  max-width: 150px;
  max-height: 65px;
}

// Modified from CKAN - for sidebar facets
ul.unstyled {
  margin-left: 0px;
  list-style: outside none none;
  padding-left: 0px;
}

.nav-simple {
  margin: 0px;
  list-style: outside none none;
  padding-bottom: 0px;
}

.nav-simple > li {
  padding: 0px;
  border-bottom: 1px dotted #DDD;
}

.nav-simple > li:last-of-type {
  border-bottom: 0px none;
}

.nav-item {
  padding: 7px 20px;
  width: 100%;
}

.nav-item > a {
  //padding-left: 15px;
  //padding-right: 15px;
  position: relative;
  display: block;
  color: #333;
  //font-size: 14px;
  //line-height: 20px;
  //margin: -7px -25px;
  padding: 7px 20px;
  text-decoration: none;
}

.nav-item > a:hover {
  background-color: #e6e6e6;
  border-color: #adadad;
}

.nav-item.active > a {
  position: relative;
  color: #ffffff;
  background-color: $grey-blue;
}

.nav-item.active > a:hover {
  color: #ffffff;
  background-color: $blue;
}

// End CKAN's sidebar facets

// Facet's title
.nav-heading {
  padding: 10px;
  background-color: #F6F6F6;
  margin: 0px;
}

.nav-heading-darker {
  background-color:#dddddd;
  padding: 10px;
  margin: 0px 0px 5px 0px;
}

.filter-button {
  color: #ffffff;
  background-color: $grey-blue;

  &:hover {
    background-color: $blue !important;
  }
}

.facet-count {
  float: right;
  color: #999;
}

.show-page-description {
  font-size: medium;
  padding: 50px 0;
}
/* ... */

